# liri-music

./: .gitignore  .gitignore~  .gitmodules  CMakeLists.txt  MAC_INSTALL.md  README.md  README.md~  icons.yml.in
build-liri-vinyl-Desktop_Qt_5_5_1_GCC_64bit-Debug/: Makefile  liri-vinyl  moc_albumobject.cpp  qrc_qml.cpp  vinylmusic
build-liri-vinyl-Desktop_Qt_5_5_1_GCC_64bit-Profile/: Makefile  liri-vinyl  liri-vinyl.debug  qrc_qml.cpp  vinylmusic
build-liri-vinyl-Desktop_Qt_5_5_1_GCC_64bit-Release/: Makefile  liri-vinyl  moc_albumobject.cpp  moc_artistobject.cpp  moc_main.cpp  moc_musicfolders.cpp  vinylmusic
build-vinyl-music-Desktop_Qt_5_5_1_GCC_64bit-Debug/: Makefile  qrc_qml.cpp  vinyl-music
cmake/Modules/: FindTaglib.cmake
icons/: liri-vinyl.ai
liri-vinyl/: AlbumsDemo.qml  AllMusicDemo.qml  ArtistsDemo.qml  Makefile  SettingsDemo.qml  TestDemo.qml  albumobject.h  dependencies.md  liri-vinyl.pro  liri-vinyl.pro.user.485614a  liri-vinyl.pro.user.770ae6b  main.cpp  main.qml  moc_albumobject.cpp  moc_artistobject.cpp  moc_main.cpp  moc_musicfolders.cpp  musicId.js  musicfolders.h  qml.qrc  qrc_qml.cpp  settings.json  songobject.h  utilities.cpp  utilities.h
src/: CMakeLists.txt  album.cpp  album.h  albumartprovider.cpp  albumartprovider.h  albummodel.cpp  albummodel.h  albumobject.cpp  albumobject.h  artist.cpp  artist.h  artistobject.cpp  artistobject.h  database.h  liri-music.rc  liri-vinyl.pro  main.cpp  main.h  musicdatabase.cpp  musicdatabase.h  musicfolders.cpp  musicfolders.h  musicscanner.cpp  musicscanner.h  qml.qrc  schema.h  settings.cpp  settings.h  song.cpp  song.h  songmodel.cpp  songmodel.h  songobject.cpp  songobject.h  utilities.cpp  utilities.h
src/js/: musicId.js
src/qml/: ActivityDemo.qml  AlbumsDemo.qml  AllMusicDemo.qml  ArtistsDemo.qml  SettingsDemo.qml  StreamsDemo.qml  TestDemo.qml  loading.qml  main.qml
vinyl-music/: Albums.qml  AlbumsDemo.qml  AllMusic.qml  AllMusicDemo.qml  ArtistsDemo.qml  README.md  SettingsDemo.qml  StreamsDemo.qml  albumobject.h  artistobject.h  audio.py  main.cpp  main.db  main.h  main.h.autosave  main.py  main.qml  musicId.js  qml.qrc  qml.qrc~  songobject.cpp  test.py  vinyl-music  vinyl-music.pro
